src/objects/Cast_and_crew__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will have a lookup with contact(standard object)</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cast and crews</relationshipLabel>
        <relationshipName>Cast_and_crews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <referenceTo>Title__c</referenceTo>
        <relationshipLabel>Cast and crews</relationshipLabel>
        <relationshipName>Cast_and_crews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type_del__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Actor</fullName>
                </value>
                <value>
                    <fullName>Actress</fullName>
                </value>
                <value>
                    <fullName>Co-actor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cast and crew</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>cast and crew Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cast and crews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>